--- a/style.css
+++ b/style.css
@@ -1,35 +1,74 @@
-/*.boxer
-    {
-
-      padding: 5em 0 0 2em;
-    }
-[class^="Tecla-"]
-        {
-          display: inline-block;
-          width: 60px;
-          background-color: gray;
-        }
-[class^="Tecla-"]:hover
-                        {
-                          color: white ;
-                        }
-[class^="Tecla-"]:active {
-                            transform: scale(.9)}
-*/
-
 body
-{
+    {
+        width:100%;
+        height: 100%;
+        background: linear-gradient(
+            to bottom right,
+          purple 10%,
+          salmon 100%
+        );
+    }
+.titulo__titulo
+                {    
+                    font-size:75px ;
+                    text-align: center;
+                    color: white;
+                    text-decoration: underline black;            
+                   }  
+.titulo__rojito
+                {
+                    color: red;
+                }
+.titulo__img
+                {   
+                  display: inline;
+                  width: 75px ;
+                  position: relative;
+                  bottom: 5px;
+                  left: 15px;
+                }
+.card__position
+                {
+                    margin-top: 50px;
+                    
+                }
+.card__button
+            {
+               
+                position: relative;
+                top: 10px;
+                left: 10px;
+     
+            }                
+.card__link
+            {
+                color: white;
+                text-decoration: none;
+            }
+.card__link:hover
+            {
+                color: black;
+                text-decoration: none;
+            }            
+.calcu__center
+                {
    display: flex; 
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
-   background: linear-gradient(
-       to bottom right,
-     purple 0%,
-     salmon 100%
-   );
+  
 }
+.fotter__copy
+            {
+                height: 150px;
+                width: 100%;
+                background: linear-gradient(
+                    to bottom right,
+                    purple 10%,
+                      violet 100%
+                );
+            }
 .calculadora
 {
    
@@ -134,3 +173,4 @@ body
 [class^="Tecla-"]:last-child
                                 {
                                    border-bottom-right-radius: 15px;
+                                }
