--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body
     {
+        padding-right: 0;
+        padding-left: 0;
         width:100%;
         height: 100%;
         background: linear-gradient(
@@ -55,8 +57,7 @@ body
    display: flex; 
    align-items: center;
    justify-content: center;
-   width: 100vw;
-   height: 100vh;
+  padding-top: 80px;
   
 }
 .fotter__copy
@@ -119,24 +120,17 @@ body
     padding-right: 1rem;
     padding-top: .5rem;
 }
-.main_resultado
+.calc-display
                 {
                     position: relative;
                     color: white;
                     background-color: rgba(223, 223, 247, 0.247);
                     width: 90%;
                    left: 19px;
+                   font-size:3rem;
+                    padding-bottom: 60px;
                 }
              
-.screen__top
-             {
-                 font-size: 1.5rem
-             }
-.screen__content
-                {
-                    font-size:3rem;
-                    padding-bottom: 100px;
-                }
 .main_teclas
                 {   display: inline-block; 
                     margin-left: 20px;           
@@ -170,7 +164,24 @@ body
 [class^="Tecla-"]:active {
                            transform: scale(.9)
                         }
-[class^="Tecla-"]:last-child
-                                {
-                                   border-bottom-right-radius: 15px;
-                                }
+
+.Tecla-0
+        {
+            width: 154px;
+            bottom: 60px;
+            
+        }
+.Tecla-Igual
+             {
+                 height: 123px;
+                 border-bottom-right-radius: 15px;
+             }
+.Tecla-1,.Tecla-2,.Tecla-3
+{
+    bottom: 32px;
+}
+.Tecla-punto
+{
+    bottom: 60px;
+    left: 1px;
+}
