--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 body
     {
-        padding-right: 0;
-        padding-left: 0;
-        width:100%;
-        height: 100%;
-        background: linear-gradient(
-            to bottom right,
-          purple 10%,
-          salmon 100%
-        );
+      background: url(adress/fondo.jpg);  
+      background-size: auto;
     }
+.menu__titulo
+                {
+                    font-family: 'Chelsea Market', cursive;
+                    text-decoration: underline red;
+
+                }
 .titulo__titulo
-                {    
+                {   padding-top: 15px;
+                    font-family: 'Chelsea Market', cursive; 
                     font-size:75px ;
                     text-align: center;
-                    color: white;
-                    text-decoration: underline black;            
+                    color:white;
+                    text-decoration: underline red;            
                    }  
 .titulo__rojito
                 {
@@ -23,25 +23,26 @@ body
                 }
 .titulo__img
                 {   
-                  display: inline;
+                  
                   width: 75px ;
                   position: relative;
                   bottom: 5px;
                   left: 15px;
+                  border-radius: 10px solid red;
                 }
-.card__position
+.card__position-1
                 {
-                    margin-top: 50px;
-                    
-                }
-.card__button
-            {
-               
-                position: relative;
-                top: 10px;
-                left: 10px;
-     
-            }                
+                    margin-top: 50px;     
+            } 
+.card__position-2
+                 {
+                     display: block;
+                     margin-top: 50px;
+                     position: relative;
+                     left: 15em;
+                     
+                     height: 40em;
+                 }               
 .card__link
             {
                 color: white;
@@ -51,31 +52,30 @@ body
             {
                 color: black;
                 text-decoration: none;
-            }            
+            }   
+.center__img
+            {
+                height: 300px;
+                
+              border: 5px solid black;
+          
+                
+            }         
 .calcu__center
                 {
-   display: flex; 
-   align-items: center;
-   justify-content: center;
-  padding-top: 80px;
-  
+                    position: relative;
+                    top:45px;
+                    display: flex; 
+                    align-items: center;
+                    justify-content: center;
+                    
 }
-.fotter__copy
-            {
-                height: 150px;
-                width: 100%;
-                background: linear-gradient(
-                    to bottom right,
-                    purple 10%,
-                      violet 100%
-                );
-            }
 .calculadora
 {
    
     width: 350px;
-    height: 515px;
-    background: black;
+    height: 525px;
+    background: darkcyan     ;
     border-radius: 15px;
     position: relative;
 }
@@ -97,12 +97,14 @@ body
               width: 100%;
               height: 65px;
               text-align: center;
-              font-size: 2em;
+              font-family: 'Finger Paint', cursive;
+              font-weight: bold;
+              font-size: 2.5em;
               border-bottom: 2px solid white;
               border-top: 2px solid white;
               position: relative;
               color: white;
-              background-color: black;
+              background-color: darkcyan;
               border-radius: 15px;
           }
 .Top__Bar::first-letter
