--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body
     {
-      background: url(adress/fondo.jpg);  
-      background-size: auto;
+    background: url(adress/fondo.jpg);  
+    background-size: auto;
     }
 .menu__titulo
                 {
                     font-family: 'Chelsea Market', cursive;
                     text-decoration: underline red;
-
                 }
 .titulo__titulo
                 {   padding-top: 15px;
@@ -16,33 +15,31 @@ body
                     text-align: center;
                     color:white;
                     text-decoration: underline red;            
-                   }  
+                }  
 .titulo__rojito
                 {
                     color: red;
                 }
 .titulo__img
                 {   
-                  
-                  width: 75px ;
-                  position: relative;
-                  bottom: 5px;
-                  left: 15px;
-                  border-radius: 10px solid red;
+                    width: 75px ;
+                    position: relative;
+                    bottom: 5px;
+                    left: 15px;
+                    border-radius: 10px solid red;
                 }
 .card__position-1
                 {
                     margin-top: 50px;     
-            } 
+                    margin-left: 10px;
+                    margin-bottom: 20px;
+                } 
 .card__position-2
-                 {
-                     display: block;
-                     margin-top: 50px;
-                     position: relative;
-                     left: 15em;
-                     
-                     height: 40em;
-                 }               
+                    {
+                        margin-top: 50px;
+                        margin-left: 10px;
+                        margin-bottom: 20px;
+                    }               
 .card__link
             {
                 color: white;
@@ -52,33 +49,42 @@ body
             {
                 color: black;
                 text-decoration: none;
-            }   
+            } 
+.footer__linea
+                {
+                    border: 3px solid red;
+                }  
+.fotter__copy
+                { 
+                    font-size: 25px;
+                    font-family: 'Chelsea Market', cursive;
+                    color: white;
+                    background-color: black;
+                    text-align: center;
+                    justify-items: center;
+                }
 .center__img
             {
                 height: 300px;
-                
-              border: 5px solid black;
-          
-                
+                border: 5px solid black;
             }         
 .calcu__center
                 {
-                    position: relative;
+                    padding-top: 25px;
+                    padding-bottom: 25px;
                     top:45px;
                     display: flex; 
                     align-items: center;
                     justify-content: center;
-                    
-}
+                }
 .calculadora
-{
-   
-    width: 350px;
-    height: 525px;
-    background: darkcyan     ;
-    border-radius: 15px;
-    position: relative;
-}
+                {
+                    width: 350px;
+                    height: 525px;
+                    background: darkcyan     ;
+                    border-radius: 15px;
+                    position: relative;
+                }
 .calculadora::after
                     {
                         content: "";
@@ -91,66 +97,62 @@ body
                         box-shadow: 0 10px 20px black;
                         opacity: 1;
                     }
-           
 .Top__Bar
-          {
-              width: 100%;
-              height: 65px;
-              text-align: center;
-              font-family: 'Finger Paint', cursive;
-              font-weight: bold;
-              font-size: 2.5em;
-              border-bottom: 2px solid white;
-              border-top: 2px solid white;
-              position: relative;
-              color: white;
-              background-color: darkcyan;
-              border-radius: 15px;
-          }
+            {
+                width: 100%;
+                height: 65px;
+                text-align: center;
+                font-family: 'Finger Paint', cursive;
+                font-weight: bold;
+                font-size: 2.5em;
+                border-bottom: 2px solid white;
+                border-top: 2px solid white;
+                position: relative;
+                color: white;
+                background-color: darkcyan;
+                border-radius: 15px;
+            }
 .Top__Bar::first-letter
-                       {
-                          
-                           color: red;
-                           font-size: 45px;
-                       
-                       }
-
-[class^="screen__"]{
-    width: 100%;
-    height: 30px;
-    text-align: right;
-    padding-right: 1rem;
-    padding-top: .5rem;
-}
+                        {
+                            color: red;
+                            font-size: 45px;
+                        }
+[class^="screen__"]
+                    {
+                        width: 100%;
+                        height: 30px;
+                        text-align: right;
+                        padding-right: 1rem;
+                        padding-top: .5rem;
+                    }
 .calc-display
                 {
                     position: relative;
                     color: white;
                     background-color: rgba(223, 223, 247, 0.247);
                     width: 90%;
-                   left: 19px;
-                   font-size:3rem;
+                    left: 19px;
+                    font-size:3rem;
                     padding-bottom: 60px;
                 }
-             
 .main_teclas
-                {   display: inline-block; 
+                {   
+                    display: inline-block; 
                     margin-left: 20px;           
                 } 
-
- [class^="Tecla-"]
-                       {
-                           display: inline-block;
-                           width: 75px;
-                           height: 60px;
-                           background-color: gray;
-                           color: darkblue;
-                           cursor: pointer;
-                           position: relative;
-                           z-index: 100;
-                           font-size: 25px;
-                           font-weight: bold;
-                       }
+[class^="Tecla-"]
+                    {
+                        display: inline-block;
+                        width: 75px;
+                        height: 60px;
+                        background-color: gray;
+                        color: darkblue;
+                        cursor: pointer;
+                        position: relative;
+                        z-index: 100;
+                        font-size: 25px;
+                        font-weight: bold;
+                    }
 [class^="Tecla-"]:nth-child(4n)
                                 {
                                     background-color: white;
@@ -159,31 +161,30 @@ body
                                 {
                                     border-bottom-left-radius: 15px;
                                 }
- [class^="Tecla-"]:hover
-                       {
-                         background-color: lightgreen ;
-                       }
-[class^="Tecla-"]:active {
-                           transform: scale(.9)
-                        }
-
+[class^="Tecla-"]:hover
+                            {
+                                background-color: lightgreen ;
+                            }
+[class^="Tecla-"]:active 
+                            {
+                                transform: scale(.9)
+                            }
 .Tecla-0
-        {
-            width: 154px;
-            bottom: 60px;
-            
-        }
+            {
+                width: 154px;
+                bottom: 60px;
+            }
 .Tecla-Igual
-             {
-                 height: 123px;
-                 border-bottom-right-radius: 15px;
-             }
+                {
+                    height: 123px;
+                    border-bottom-right-radius: 15px;
+                }
 .Tecla-1,.Tecla-2,.Tecla-3
-{
-    bottom: 32px;
-}
+                            {
+                                bottom: 32px;
+                            }
 .Tecla-punto
-{
-    bottom: 60px;
-    left: 1px;
-}
+                {
+                    bottom: 60px;
+                    left: 1px;
+                }
